cmake_minimum_required(VERSION 3.21)

project(fmtlog CXX)

if(MSVC)
    add_compile_options(/std:c++latest)
else()
    set(THREADS_PREFER_PTHREAD_FLAG ON)
    find_package(Threads REQUIRED)

    add_compile_options(-Wall -O3 -std=c++17)
    link_libraries(Threads::Threads)
endif()

link_directories(.)
include_directories(fmt/include)

if (NOT DEFINED FMTLOG_IGNORE_SHARED)
  add_library(fmtlog-shared SHARED fmtlog.cc)
  if(MSVC)
    target_link_libraries(fmtlog-shared fmt)
  endif()
  install(TARGETS fmtlog-shared)
endif()

if (NOT DEFINED FMTLOG_IGNORE_STATIC)
  add_library(fmtlog-static fmtlog.cc)
  if(MSVC)
    target_link_libraries(fmtlog-static fmt)
  endif()
  install(TARGETS fmtlog-static)
endif()

add_subdirectory(fmt)
if (NOT DEFINED FMTLOG_SKIP_TEST_BUILD)
  add_subdirectory(test)
endif()
if(NOT MSVC)
  if (NOT DEFINED FMTLOG_SKIP_BENCHMARKS)
    add_subdirectory(bench)
  endif()
endif()
